- Chow test: perform a robust version if the original
  model was estimated using an HCCME
- OS X package: fix for the problem whereby GTK could
  lose track of its image-loading modules
- CSV data: improve recognition of daily dates
- PCA: fix column-order of components in printout for the
  case of n > 7
- Small fixes for opening of datafiles in GUI

8/28/2008 version 1.7.7
- Revamp of internal handling of scalar variables
- The --preserve option to the "nulldata" and "open" commands
  now preserves existing scalars as well as matrices
- Windows package: update to GTK+ 2.12.11 and friends
- Inside functions: restrict the smpl command within the
  bounds set on entry to the function
- setobs command: if used inside a function, revert the
  effects on exit
- ordered probit/logit: fix for the case where the dependent
  variable does not form a continuous integer sequence; 
  fix reporting of information criteria; switch to the mode
  of presentation of cut-points used by Stata and R
- string-editing dialogs: ensure we have a cancel button
- Saving data when the dataset is currently sub-sampled: 
  fix breakage whereby the option to restore the full dataset
  was not shown
- Naming variables: put in place more stringent checking to
  avoid name collisions across series, scalars, matrices, etc.
- VARs in saved sessions: ensure that we save the information
  needed for subsequent bootstrap analyses
- Fix the mechanism for searching for a user's customized
  LaTeX preamble file (got broken at some point)
- LaTeX compilation: be more lenient -- getting some output
  on standard error does not necessarily mean that 
  compilation has failed
- Determining the main gretl directory: try to handle the
  case where the user has a stale ~/.gretl2rc file
- Minor OS X fixes
- Respect keyboard "Esc" as dialog "Cancel" more consistently 
- Variable selection dialogs: allow use of right and left
  arrow keys to activate the "Add" and "Remove" buttons