@@ -144,7 +144,8 @@ struct gretl_option gretl_opts[] = {
     { FREQ,     OPT_Q, "quiet" },
     { FREQ,     OPT_S, "silent" },
     { FREQ,     OPT_Z, "normal" },
-    { GARCH,    OPT_A, "arma-init" }, 
+    { GARCH,    OPT_A, "arma-init" },
+    { GARCH,    OPT_F, "fcp" }, 
     { GARCH,    OPT_N, "nc" }, 
     { GARCH,    OPT_R, "robust" },
     { GARCH,    OPT_V, "verbose" },
